[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.6.0",
    "fast-langdetect>=0.3.2",
    "fastembed>=0.7.0",
    "flagembedding>=1.3.4",
    "langchain-ollama>=0.3.3",
    "langchain-qdrant>=0.2.0",
    "langcodes>=3.5.0",
    "langgraph>=0.4.7",
    "ollama>=0.4.8",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[dependency-groups]
dev = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "memray>=1.17.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
